--- a/ulearn/theme/scss/_idees.scss
+++ b/ulearn/theme/scss/_idees.scss
@@ -356,7 +356,8 @@
     clear: both;
     float: left;
     margin-left: 0;
-    width: 60%;
+    width: 40%;
+    margin-top: 10px;
 }
 .portaltype-ulearn-proposal #portal-column-content #content .eines {
     width: auto;
@@ -384,5 +385,18 @@
 .proposta_no_validada {
     float: none;
     margin-bottom: 5px;
+}
+#ideaslist {
+    .span9 {
+    float: left;
+    max-width: 160px;
+    margin-left: 0;
+    }
+    .span1 {
+    margin-right: 10px;
+    }
+}
+.template-proposalslist .idea:first-child {
+    padding-top: 130px;
 }
 }
