Cerca afegint check només en aquest lloc

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1206,3 +1206,13 @@ border-collapse: separate;
 #formfield-form-widgets-quicklinks_table .datagridwidget-table-view {
 border-collapse: separate;
 }
+
+.searchSection label {
+  color: white;
+  font-size: 11px;
+  text-shadow: 1px 1px 1px #555;
+}
+
+.portaltype-formfolder .btn-group {
+display: none;
+}
