--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3450,3 +3450,22 @@ label[for="form.ext_editor"] ~ div.widget {
 .portaltype-formfolder .btn-group {
 display: none;
 }
+
+.portletCalendar .ploneCalendar td.cal_has_events .popover-content a {
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 15px;
+}
+.portletCalendar .ploneCalendar td.cal_has_events .popover-content a:hover {
+  opacity:0.8;
+}
+
+#box_agenda li a {
+  padding-left: 0;
+}
+#box_agenda li i {
+  float: left;
+  margin-bottom: 6px;
+  margin-right: 8px;
+  margin-top: 2px;
+}
