--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1237,3 +1237,10 @@ label[for="form.ext_editor"] ~ div.widget {
   margin-right: 8px;
   margin-top: 2px;
 }
+
+.datagridwidget-cell .label {
+  display: none;
+}
+.datagridwidget-cell input[type="checkbox"] {
+  margin: 0 52px 10px;
+}
