--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1215,6 +1215,15 @@ label[for="form.ext_editor"] ~ div.widget {
   text-shadow: 1px 1px 1px #555;
 }
 
+.searchSection {
+  margin-bottom: 5px;
+  margin-top: -5px;
+}
+
+.tt-dropdown-menu {
+ z-index: 1020 !important;
+}
+
 .portaltype-formfolder .btn-group {
   display: none;
 }
