--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1162,7 +1162,7 @@ label[for="form.ext_editor"] ~ div.widget {
       width: 50%;
   }
   #menusup {
-      height: 55px;
+      // height: 55px;
   }
   .template-homepage #menusup {
       height: 55px;
