No mostrar btn-group en els formularis

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1228,6 +1228,10 @@ label[for="form.ext_editor"] ~ div.widget {
   display: none;
 }
 
+.portaltype-formthankspage .btn-group {
+  display: none;
+}
+
 .portletCalendar .ploneCalendar td.cal_has_events .popover-content a {
   font-size: 13px;
   font-weight: normal;
