--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3472,6 +3472,10 @@ label[for="form.ext_editor"] ~ div.widget {
 .portaltype-formfolder .btn-group {
   display: none; }
 
+.portaltype-formthankspage .btn-group {
+  display: none;
+}
+
 .portletCalendar .ploneCalendar td.cal_has_events .popover-content a {
   font-size: 13px;
   font-weight: normal;
