--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1270,3 +1270,34 @@ label[for="form.ext_editor"] ~ div.widget {
   margin-top: -10px;
   color: white;
 }
+
+#searchinputusers .inputsearchUsers .searchInput{
+  width: 190px;
+  margin-bottom: 0px;
+}
+
+#searchinputusers .inputsearchUsers .add-on{
+  color: #888888;
+  background-color: white;
+  border: none;
+  font-size: 15px;
+  position: relative;
+  right: 25px;
+  top: -2px;
+  z-index: 10;
+  padding: 1px;
+}
+
+#box_thinkers #searchinputusers {
+  width: 210px !important;
+}
+
+.inputsearchUsers button{
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: -7px;
+}
+
+.inputsearchUsers form{
+  margin-bottom: 0px;
+}
